--- a/MovieBucket/app/src/main/res/layout/content_explore.xml
+++ b/MovieBucket/app/src/main/res/layout/content_explore.xml
@@ -13,8 +13,11 @@
     tools:context="ift2905.moviebucket.Explore"
     tools:showIn="@layout/app_bar_explore">
 
-    <ListView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/list" />
+        android:layout_alignParentTop="true"
+        android:id="@+id/fragment_container">
+
+    </FrameLayout>
 </RelativeLayout>
