--- a/MovieBucket/app/src/main/res/layout/app_bar_main.xml
+++ b/MovieBucket/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ift2905.moviebucket.Explore">
+    tools:context="ift2905.moviebucket.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,6 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_explore" />
+    <include layout="@layout/content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
