--- a/MovieBucket/app/src/main/res/layout/content_main.xml
+++ b/MovieBucket/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ift2905.moviebucket.Explore"
-    tools:showIn="@layout/app_bar_explore">
+    tools:context="ift2905.moviebucket.MainActivity"
+    tools:showIn="@layout/app_bar_main">
 
     <FrameLayout
         android:layout_width="match_parent"
