--- a/MovieBucket/app/src/main/res/layout/activity_movie_view.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_movie_view.xml
@@ -22,18 +22,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
+            android:paddingTop="5dp"
             android:text="TextView"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="265dp"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="222dp"
+                android:layout_width="173dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -52,7 +53,7 @@
                 <ImageView
                     android:id="@+id/moviePoster"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="220dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
@@ -70,7 +71,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_below="@+id/moviePoster"
                         android:layout_weight="1"
-                        android:text="ADD MB"
+                        android:text="+ My Bucket"
                         android:textAlignment="center" />
                 </RelativeLayout>
 
