--- a/MovieBucket/app/src/main/res/layout/activity_movie_view.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_movie_view.xml
@@ -307,6 +307,90 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/Cast"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingTop="10dp">
+
+                <TextView
+                    android:id="@+id/castTitle"
+                    style="@android:style/Widget.TextView.SpinnerItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cast" />
+
+                <TableLayout
+                    android:id="@+id/movieMainCast"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:stretchColumns="1">
+
+                    <TableRow
+                        android:id="@+id/movieCast1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/movieActor1"
+                            android:layout_column="1"
+                            android:paddingRight="3dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+
+                        <TextView
+                            android:id="@+id/movieChar1"
+                            android:gravity="right"
+                            android:paddingRight="15dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/movieCast2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/movieActor2"
+                            android:layout_column="1"
+                            android:paddingRight="3dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+
+                        <TextView
+                            android:id="@+id/movieChar2"
+                            android:gravity="right"
+                            android:paddingRight="15dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/movieCast3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/movieActor3"
+                            android:layout_column="1"
+                            android:paddingRight="3dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+
+                        <TextView
+                            android:id="@+id/movieChar3"
+                            android:gravity="right"
+                            android:paddingRight="15dp"
+                            android:paddingTop="3dp"
+                            android:text="" />
+                    </TableRow>
+
+                </TableLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
