Changed search to multiple result types

--- a/MovieBucket/app/src/main/res/values/colors.xml
+++ b/MovieBucket/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#484848</color>
     <color name="colorPrimaryDark">#282828</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#EE402F</color>
 </resources>
