--- a/MovieBucket/app/src/main/res/layout/poster_card.xml
+++ b/MovieBucket/app/src/main/res/layout/poster_card.xml
@@ -16,24 +16,22 @@
         <ImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="220dp"
             android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/placeholder"/>
+            android:scaleType="centerCrop"/>
 
         <TextView
             android:id="@+id/title"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/thumbnail"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:maxLines="3"
-            android:padding="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="#444"
-            android:textSize="18dp"
-            android:textStyle="bold"/>
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textSize="17dp"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
