Midnight push for hot boys and cool girls! Buttons/popup have the movieId
Details for people who know how to read:
>made a custom class that extends image button so it could have the Movie Id
in it

>made a custom class for Popup menu that has an attribute for the Movie Id
I'm still too dumb to figure out how to make the popup menu's icons visible.
(Actually I know how to do it, I'm just trying to do it in a less headache-
inducing way)

--- a/MovieBucket/app/src/main/res/layout/mylist_row_item_view.xml
+++ b/MovieBucket/app/src/main/res/layout/mylist_row_item_view.xml
@@ -6,7 +6,7 @@
     android:layout_weight="1"
     android:orientation="horizontal">
 
-        <ImageButton
+        <ift2905.moviebucket.BadassImageButton
             android:id="@+id/starred"
             android:layout_height="match_parent"
             android:layout_width="0dp"
@@ -15,7 +15,7 @@
             android:background="@null"
             app:srcCompat="@drawable/ic_star_black_24dp" />
 
-        <ImageButton
+        <ift2905.moviebucket.BadassImageButton
             android:id="@+id/notstarred"
             android:layout_height="match_parent"
             android:layout_width="0dp"
@@ -33,7 +33,7 @@
             android:gravity="center_vertical"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-        <ImageButton
+        <ift2905.moviebucket.BadassImageButton
             android:id="@+id/more"
             android:layout_height="match_parent"
             android:layout_width="0dp"
