--- a/MovieBucket/app/src/main/res/menu/popup_menu_my_bucket.xml
+++ b/MovieBucket/app/src/main/res/menu/popup_menu_my_bucket.xml
@@ -4,20 +4,20 @@
 
     <item
         android:id="@+id/markAsViewed"
-        app:srcCompat="@drawable/ic_remove_red_eye_black_24dp"
-        android:title="Saw it!"
-        />
+        android:title="Mark as viewed"
+        app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />
 
     <item
         android:id="@+id/schedule"
-        app:srcCompat="@drawable/ic_date_range_black_24dp"
-        android:title="Schedule it!"
-        />
+        android:title="Add to calendar"
+        app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
     <item
+        android:id="@+id/details"
+        android:title="Movie details" />
+    <item
         android:id="@+id/delete"
-        app:srcCompat="@drawable/ic_close_black_24dp"
-        android:title="Delete it!"
-        />
+        android:title="Remove from list"
+        app:srcCompat="@drawable/ic_close_black_24dp" />
 
 </menu>
