Hack for focus on drawer navigation

--- a/MovieBucket/app/src/main/res/layout/activity_main.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,12 @@
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    <LinearLayout android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px" >
+        <requestFocus />
+    </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
