--- a/MovieBucket/app/src/main/res/menu/popup_menu_my_history.xml
+++ b/MovieBucket/app/src/main/res/menu/popup_menu_my_history.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/schedule"
-        android:title="Add to calendar"
+        android:title="Schedule"
         app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
     <item
