--- a/MovieBucket/app/src/main/res/layout/activity_movie_view_tv.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_movie_view_tv.xml
@@ -192,11 +192,13 @@
                                 android:layout_height="wrap_content"
                                 android:text="+ My History" />
 
-                            <ImageButton
+                            <Button
                                 android:id="@+id/toCalendar"
                                 android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                app:srcCompat="@drawable/ic_date_range_black_24dp" />
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Schedule" />
+
                         </LinearLayout>
 
                     </LinearLayout>
