--- a/MovieBucket/app/src/main/res/layout/activity_person_view.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_person_view.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:visibility="visible"
-    tools:context="ift2905.moviebucket.PersonView" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="ift2905.moviebucket.PersonView">
 
     <ExpandableListView
-        android:id="@+id/creditsList"
+        android:id="@+id/credisList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
-
+</android.support.constraint.ConstraintLayout>
