--- a/MovieBucket/app/src/main/res/layout/nav_header_main.xml
+++ b/MovieBucket/app/src/main/res/layout/nav_header_main.xml
@@ -14,16 +14,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Movie Bucket"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:src="@drawable/ic_logo_white" />
 
 </LinearLayout>
