--- a/MovieBucket/app/src/main/res/layout/nav_header_main.xml
+++ b/MovieBucket/app/src/main/res/layout/nav_header_main.xml
@@ -14,9 +14,17 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@drawable/ic_logo_white" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:text="Movie Bucket"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 </LinearLayout>
