--- a/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
@@ -43,12 +43,26 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/moviePoster"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignWithParentIfMissing="false"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/cardview_shadow_start_color"
+                    android:isScrollContainer="false"
+                    android:padding="2dp" />
+
                 <LinearLayout
                     android:id="@+id/textContainer"
-                    android:layout_width="173dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:paddingLeft="15dp"
                     android:weightSum="1">
 
                     <LinearLayout
@@ -56,7 +70,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.13"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingBottom="7dp">
 
                         <TextView
                             android:id="@+id/yearTitle"
@@ -81,7 +96,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.13"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingBottom="7dp">
 
                         <TextView
                             android:id="@+id/runtimeTitle"
@@ -107,7 +123,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.13"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingBottom="7dp">
 
                         <TextView
                             android:id="@+id/ratingTitle"
@@ -133,7 +150,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.13"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingBottom="7dp">
 
                         <TextView
                             android:id="@+id/genreTitle"
@@ -152,57 +170,54 @@
                             android:layout_below="@+id/genreTitle"
                             android:inputType="textMultiLine"
                             android:text="-" />
+
                     </LinearLayout>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/posterContainer"
-                    android:layout_width="wrap_content"
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/Buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/buttonAddMb"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:weightSum="1">
+                    android:layout_alignParentEnd="false"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_theaters_black_24dp"
+                    android:drawablePadding="7dp"
+                    android:gravity="left|center_vertical"
+                    android:text="+ My Bucket"
+                    android:textSize="10sp" />
 
-                    <ImageView
-                        android:id="@+id/moviePoster"
-                        android:layout_width="match_parent"
-                        android:layout_height="225dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignWithParentIfMissing="false"
-                        android:isScrollContainer="false" />
+                <Button
+                    android:id="@+id/buttonAddH"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_history_black_24dp"
+                    android:drawablePadding="7dp"
+                    android:gravity="left|center_vertical"
+                    android:text="+ My History"
+                    android:textSize="10sp" />
 
-                    <Button
-                        android:id="@+id/buttonAddMb"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="false"
-                        android:text="+ My Bucket"
-                        android:textAlignment="center" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/buttonAddH"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="+ History" />
-
-                        <Button
-                            android:id="@+id/toCalendar"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Schedule" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/toCalendar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
+                    android:drawablePadding="7dp"
+                    android:gravity="left|center_vertical"
+                    android:text="+ My Calendar"
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
